Fix some links and markdown p spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,7 @@ img {
   max-width: 100%;
   display: block;
 }
+
+.markdown > p {
+  margin-top: 1.1rem;
+}
